--- a/index.html
+++ b/index.html
@@ -1516,13 +1516,13 @@
                     <div class="col l-2-4 m-8 c-12">
                         <h3 class="footer__heading">TẢI ỨNG DỤNG SHOPEE NGAY THÔI
                         <div class="footer__download">
-                            <img src="/assets/img/QR code/QRcode.png" alt="Download QR code" class="footer__download-qr">
+                            <img src="./assets/img/QR code/QRcode.png" alt="Download QR code" class="footer__download-qr">
                             <div class="footer__download-app">
                                 <a href="" class="footer__download-app-link">
-                                    <img src="/assets/img/QR code/appstore.png" alt="App Store" class="footer__download-app-img">
+                                    <img src="./assets/img/QR code/appstore.png" alt="App Store" class="footer__download-app-img">
                                 </a>
                                 <a href="" class="footer__download-app-link">
-                                    <img src="/assets/img/QR code/ggplay.png" alt="Google Play" class="footer__download-app-img">
+                                    <img src="./assets/img/QR code/ggplay.png" alt="Google Play" class="footer__download-app-img">
                                 </a>
                             </div>
                         </div>
